--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": "league/:package_name",
-    "description": ":package_description",
+    "name": "league/evangelist",
+    "description": "To check for developer status.",
     "keywords": [
         "league",
-        ":package_name"
+        "evangelist"
     ],
-    "homepage": "https://github.com/thephpleague/:package_name",
+    "homepage": "https://github.com/thephpleague/evangelist",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": ":author_email",
-            "homepage": ":author_website",
+            "name": "Dipo Isola",
+            "email": "dipoisola@gmail.com",
+            "homepage": "http://github.com/andela-oisola",
             "role": "Developer"
         }
     ],
@@ -24,7 +24,7 @@
     },
     "autoload": {
         "psr-4": {
-            "League\\Skeleton\\": "src"
+            "League\\Evangelist\\": "src"
         }
     },
     "autoload-dev": {
