--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php" : ">=5.3.0"
+        "php" : ">=5.3.0",
+        "knplabs/github-api": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
@@ -29,7 +30,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "League\\Skeleton\\Test\\": "tests"
+            "League\\EvangelistStatus\\Test\\": "tests"
         }
     },
     "scripts": {
