--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,12 +11,12 @@
          stopOnFailure="false">
     <testsuites>
         <testsuite name="League Test Suite">
-            <directory>tests</directory>
+            <directory>tests/</directory>
         </testsuite>
     </testsuites>
     <filter>
         <whitelist>
-            <directory suffix=".php">src/</directory>
+            <directory suffix=".php">src</directory>
         </whitelist>
     </filter>
     <logging>
