--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "psr-4": {
             "League\\EvangelistStatus\\Test\\": "tests"
         }
+        "classmap": ["/src"]
     },
     "scripts": {
         "test": "phpunit"
