--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "php" : ">=5.3.0",
         "knplabs/github-api": "^1.4",
-        "php-mock/php-mock-phpunit": "^0.3.0"
+        "php-mock/php-mock-phpunit": "^0.3.0",
+        "vlucas/phpdotenv": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
