--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php" : ">=5.3.0",
         "knplabs/github-api": "^1.4",
         "php-mock/php-mock-phpunit": "^0.3.0",
-        "vlucas/phpdotenv": "^2.0"
+        "vlucas/phpdotenv": "^2.0",
+        "guzzlehttp/guzzle": "~4.0."
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
@@ -28,11 +29,12 @@
     "autoload": {
         "psr-4": {
             "League\\Evangelist\\": "src"
-        }
+        },
+        "classmap": ["src/"]
     },
     "autoload-dev": {
         "psr-4": {
-            "League\\EvangelistStatus\\Test\\": "tests"
+            "League\\Evangelist\\Test\\": "tests"
         }
     },
     "scripts": {
